--- a/simplicont_frontend/login.html
+++ b/simplicont_frontend/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styleLogin.css">
-    <title>Genesis Contábil</title>
+    <title>Genesis Contábil - Login</title>
 </head>
 <body>
     <header class="container__cabecalho">
@@ -24,7 +24,7 @@
                     <label for="checkbox">
                         <input type="checkbox" name="checkbox" id="checkbox">Lembrar
                     </label>
-                    <a href="#">Esqueceu a senha?</a> <br>
+                    <a href="./shared/reset_senha.html">Esqueceu a senha?</a> <br>
                 </div>
                 <button class="botao__entrar" type="submit">Entrar</button>
             </form>
